<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_tip_bg">
    <TextView
        android:id="@+id/dialog_asklocation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:text="@string/tip"/>
    <TextView
        android:id="@+id/dialog_asklocation_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_asklocation_title"
        android:paddingBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_centerInParent="true"
        android:textColor="@android:color/darker_gray"
        android:text="@string/askLocation"/>
    <View
        android:id="@+id/dialog_asklocation_divider_v"
        android:layout_below="@id/dialog_asklocation_content"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#e3dee2"/>
    <LinearLayout
        android:id="@+id/dialog_asklocation_ll"
        android:layout_below="@id/dialog_asklocation_divider_v"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/dialog_asklocation_ok_btn_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:textColor="@android:color/black"
            android:background="@drawable/dialog_asklocation_btn_ok_bg"
            android:text="@string/queding"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/dialog_asklocation_cancel_btn_tv"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/dialog_asklocation_btn_cancel_bg"
            android:text="@string/quxiao"
            android:textSize="16sp"/>
    </LinearLayout>
    <View
        android:layout_width="0.5dp"
        android:layout_height="wrap_content"
        android:background="#e3dee2"
        android:layout_centerHorizontal="true"
        android:layout_alignTop="@id/dialog_asklocation_divider_v"
        android:layout_alignBottom="@id/dialog_asklocation_ll"/>
</RelativeLayout>